manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo
          image: ceappacr.azurecr.io/82107454
          ports:
          - containerPort: 8080
