manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: troubleshooting
spec:
    ports:
        - port: 8080
    selector:
        app: troubleshooting-dev
